tests/ui/to_tokens_span.stderr
error: whole type
 --> tests/ui/to_tokens_span.rs:4:17
  |
4 | to_tokens_span!(std::option::Option);
  |                 ^^^^^^^^^^^^^^^^^^^

error: explicit .span()
 --> tests/ui/to_tokens_span.rs:4:17
  |
4 | to_tokens_span!(std::option::Option);
  |                 ^^^
